# realsense

realsense2_camera/: CMakeLists.txt  package.xml
realsense2_camera/include/: realsense_node_factory.h
realsense2_camera/src/: realsense_node_factory.cpp
realsense_camera/: CMakeLists.txt  package.xml
realsense_camera/launch/: r200_nodelet_rgbd.launch
realsense_camera/patch/: patch_docker.sh  postinst.patch
